# lacrei-saude-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
consultas/: models.py  serializers.py  teste.py  views.py
consultas/migrations/: 0001_initial.py
core/: settings.py  urls.py
profissionais/: apps.py  models.py  serializers.py  teste.py  views.py
profissionais/migrations/: 0001_initial.py
