[project]
name = "lacrei-saude-api"
version = "0.1.0"
description = "API de Gerenciamento de Consultas Médicas"
authors = [
    {name = "Seu Nome"}
]
requires-python = "^3.11"
dependencies = [
    "django (==4.2.*)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
